Ajustes nas listas(Quando esta vazia, desabilita botões) -> Telas de cadastro(Metodo Verifica Campos(SAIR _ FECHANDO)) -> Detalhes nas telas de cadastro, CAMPOS

--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/cadastro/CadEntradasGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/cadastro/CadEntradasGUI.form
@@ -236,6 +236,9 @@
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTvalorKeyTyped"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
