--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/lista/ListFuncionariosGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/lista/ListFuncionariosGUI.form
@@ -118,6 +118,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTpesquisa">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="13" style="0"/>
+            </Property>
+          </Properties>
           <Events>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jTpesquisaFocusLost"/>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTpesquisaKeyPressed"/>
