--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/cadastro/CadProdutoGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/cadastro/CadProdutoGUI.form
@@ -196,6 +196,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCFornecedorActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
